# CNN-networks-for-MNIST-and-CIFAR

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: descriptions.docx
src/cifar/: cifardataset.cpp  cifardataset.h  model_cifar.cpp  model_cifar.h  testthread_cifar.cpp  testthread_cifar.h  trainingthread_cifar.cpp  trainingthread_cifar.h
src/core/: main.cpp  mainwindow.cpp  mainwindow.h
src/mnist/: model_mnist.cpp  model_mnist.h  testthread.cpp  testthread.h  trainingthread.cpp  trainingthread.h
src/utils/: handwritingdialog.cpp  handwritingdialog.h
ui/: mainwindow.ui
